# MyQtRenderEngine

./: CFRenderEngine.pro  CMakeLists.txt  LICENSE  README.md  main.cpp
asset/qss/css/: qss.css
asset/shader/: shader.qrc
asset/shader/display/: display.frag  display.vert
asset/shader/primitive/: primitive.frag  primitive.vert
asset/shader/simple/: simple.frag  simple.vert
cmake/: qt_config.cmake  tool.cmake
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderview.cpp  renderview.h
src/Components/: ComponentManager.cpp  ComponentManager.h  component.cpp  component.h  componentwidget.cpp  componentwidget.h
src/Components/Appearance/: Triangle.h
src/Components/Base/: Camera.h  Component.cpp  Component.h  EntityInfo.h  MetaInfo.h  Transform.h  UIComponent.cpp  UIComponent.h  cfcomponent.cpp  cfcomponent.h  component.cpp  component.h
src/Components/Primitive/: Cube.h  Quad.h  Triangle.h
src/Core/: CameraManager.cpp  CameraManager.h  Core.h  GL.cpp  GL.h  entityx.cpp  entityx.h  glm.h
src/Entities/: entity.cpp  entity.h
src/Entity/: CFEntity.cpp  CFEntity.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
src/Render/: Render.cpp  Render.h  RenderEngine.cpp  RenderEngine.h  renderthread.cpp  renderthread.h  texturebuffer.cpp  texturebuffer.h
src/Render/Base/: FrameBuffer.cpp  FrameBuffer.h  GLResource.cpp  GLResource.h  IndexBuffer.cpp  IndexBuffer.h  RenderBuffer.cpp  RenderBuffer.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Render/Common/: CameraManager.cpp  CameraManager.h  engine_common.cpp  engine_common.h
src/Render/Graph/: GraphNode.cpp  GraphNode.h  RenderGraph.cpp  RenderGraph.h  RenderQueue.cpp  RenderQueue.h
src/Render/Renderer/: DisplayRenderer.cpp  DisplayRenderer.h  Renderer.cpp  Renderer.h  SimpleRenderer.cpp  SimpleRenderer.h
src/Systems/Base/: System.cpp  System.h
src/Systems/Primitive/: CubeSystem.cpp  CubeSystem.h  QuadSystem.cpp  QuadSystem.h  TriangleSystem.cpp  TriangleSystem.h
src/Systems/Render/: Appearance.h  DrawTriangleSystem.cpp  DrawTriangleSystem.h  System.h  TriangleSystem.cpp  TriangleSystem.h
src/UI/: AddComponentWidget.cpp  AddComponentWidget.h  ComponentHeaderButton.cpp  ComponentHeaderButton.h  ComponentHeaderWidget.cpp  ComponentHeaderWidget.h  componentwidget.cpp  componentwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  popupwidgetbutton.cpp  popupwidgetbutton.h  renderview.cpp  renderview.h
src/Utils/: RenderUtils.cpp  RenderUtils.h
